Fixed tasks to run from the src dir

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,12 +6,13 @@
         {
             "label": "flash",
             "type": "shell",
-            "command": "make flash"
+            "command": "cd src && make flash"
         },
         {
             "label": "monitor",
             "type": "shell",
-            "command": "make monitor"
+            "command": "cd src && make monitor",
+            "problemMatcher": []
         }
     ]
 }
